--- a/index.html
+++ b/index.html
@@ -1,40 +1,22 @@
-﻿<!DOCTYPE html>
-
+<!DOCTYPE html>
 <html>
-
   <head>
-
   <title>K8 loves M@</title>
-
   <link href="/vday.css" type="text/css" rel="stylesheet">
-
   </head>
-
   <body>
-
   <h1>HAPPY VALENTINE's DAY, M@</h1>
-
   <p>On February 14, 2016, my baby got me pickles and pink tullips for Valentine's Day.<br /> Little did I know that that was just the beginning of an amazing journey and relationship. Even before the Beer Mile you already knew me so well. M@, I just wanted to let you know that I am so happy you are my valentine. February 14th has never been as special a day as it is now that I have you. You are the love of my life, and I'm so excited to share today with you now and for years to come.<p>
-  
-  <img src="https://i5.walmartimages.com/asr/2cf78513-eb12-456c-997f-009d6a794db3_1.0aad3aa64545d6567b52db74b6229b47.jpeg"/>
-
+    <img src="https://i5.walmartimages.com/asr/2cf78513-eb12-456c-997f-009d6a794db3_1.0aad3aa64545d6567b52db74b6229b47.jpeg"/>
   <p>Because I'm new to this whole coding thing, I thought I'd practice out my web design by telling you all the reasons why I love you in the different ways I know how. First, in list form:</p>
-
   <ol>
-
   <li>You're are the more genuine person I know. You care about everyone and everything.</li>
-
   <li>You have the happiest smile. It makes me smile.</li>
   <li>You love your family, and they mean everything to you.</li>
-
   <li>You are amazing at impressions.</li>
-
   </ol>
-
   <p>For an explanation on the biological and psychological processes that my heart undergoes when I see you, click the fancy link below:</p>
-
   <a href="https://en.wikipedia.org/wiki/Love#Psychological_basis" target="_blank">Fancy Link</a>
-  
   </body>
 </html>
  
