--- a/vday2.html
+++ b/vday2.html
@@ -3,7 +3,7 @@
 <head>
   <title>Baker's Bike Shop</title>
   <link href="https://fonts.googleapis.com/css?family=Abel|Amatic+SC|Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="vday2.css">
 </head>
 <body>
 
